Fix builds on java 9+